one more image for favicon

--- a/HTML_CSS/html-projekti/index.html
+++ b/HTML_CSS/html-projekti/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oma staattinen verkkosivu</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./img/favicon-96x96.png" type="image/x-icon" />
   </head>
   <body>
     <h1>Tervetuloa omalle staattiselle verkkosivulleni</h1>
@@ -13,7 +13,7 @@
     <a href="./html/about.html">About</a>
     <a href="./html/contact.html">Contact</a>
     <br />
-    <img src="./img/fish2.jpeg" alt="A fish image" width="30%" height="30%" />
+    <img src="./img/fish.jpeg" alt="A fish image" width="30%" height="30%" />
     <script src="./js/script.js"></script>
   </body>
 </html>
