css is done for profile_page_project

--- a/HTML_CSS/2_viikko/profile_page_project/index.html
+++ b/HTML_CSS/2_viikko/profile_page_project/index.html
@@ -9,27 +9,44 @@
   </head>
   <body>
     <header>
-      <div class="header">
-        <h1>Maria Link</h1>
-        <img src="./img/fish2.jpeg" alt="Foto" />
-      </div>
-      <hr />
+      <h1>Maria Link</h1>
     </header>
 
     <main>
-      <div>
-        <p>
-          I'm Maria, currently studying full-stack development. I have
-          experience with languages like C and Python, having worked on several
-          projects—both individual and group-based. Right now, I'm learning
-          JavaScript, HTML, and CSS, and soon, I'll start exploring TypeScript,
-          Node.js, and React. I'm deeply passionate about programming and enjoy
-          solving problems and puzzles that come my way.
-        </p>
+      <div class="box">
+        <div id="foto">
+          <img src="./img/fish2.jpeg" alt="Foto" />
+        </div>
+        <div id="info">
+          <p><a href="tel:+358469322193">+358 46 93 22 193</a><br /></p>
+          <p>
+            <a href="mailto:maria8link@gmail.com">maria8link@gmail.com</a><br />
+          </p>
+          <p>
+            <a
+              href="https://www.google.com/maps?q=Niittykatu+10b+51,+Espoo"
+              target="_blank"
+            >
+              Espoo
+            </a>
+          </p>
+        </div>
+        <div id="about">
+          <p>
+            I'm Maria, currently studying full-stack development. I have
+            experience with languages like C and Python, having worked on
+            several projects—both individual and group-based. Right now, I'm
+            learning JavaScript, HTML, and CSS, and soon, I'll start exploring
+            TypeScript, Node.js, and React. I'm deeply passionate about
+            programming and enjoy solving problems and puzzles that come my way.
+          </p>
+        </div>
       </div>
-      <div>
-        <p>Skills</p>
-        <div>
+      <div class="box">
+        <h2>Skills</h2>
+      </div>
+      <div class="box border">
+        <div class="skills">
           <ul>
             <li>C</li>
             <li>Python</li>
@@ -39,6 +56,8 @@
             <li>Algoritms</li>
             <li>Network and system administration</li>
           </ul>
+        </div>
+        <div class="skills">
           <ul>
             <li>Problem-solving skills</li>
             <li>Multitasking</li>
