--- a/JS/04_viikko/harjoitukset/DOM_06/index.html
+++ b/JS/04_viikko/harjoitukset/DOM_06/index.html
@@ -35,6 +35,7 @@
       <div id="emailError" class="error"></div>
 
       <button type="submit">Submit</button>
+      <p id="result"></p>
     </form>
     <script src="./script.js"></script>
   </body>
