--- a/HTML_CSS/4_viikko/index.html
+++ b/HTML_CSS/4_viikko/index.html
@@ -22,7 +22,7 @@
         name="firstName"
         required
         aria-describedby="firstNameError"
-        placeholder=""
+        placeholder="Enter your first name"
         autocomplete="given-name"
       />
       <div id="firstNameError" class="error"></div>
@@ -34,7 +34,7 @@
         name="lastName"
         required
         aria-describedby="lastNameError"
-        placeholder=""
+        placeholder="Enter your last name"
         autocomplete="family-name"
       />
       <div id="lastNameError" class="error"></div>
@@ -49,7 +49,7 @@
         name="email"
         required
         aria-describedby="emailError"
-        placeholder=""
+        placeholder="Enter your email"
         autocomplete="email"
       />
       <div id="emailError" class="error"></div>
@@ -64,7 +64,7 @@
         pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
         title="The password must contain at least 8 characters, at least one uppercase letter and one digit."
         aria-describedby="passwordError"
-        placeholder=""
+        placeholder="Enter password"
         autocomplete="new-password"
       />
       <div id="passwordError" class="error"></div>
@@ -76,7 +76,7 @@
         name="confirmPassword"
         required
         aria-describedby="confirmPasswordError"
-        placeholder=""
+        placeholder="Enter confirm password"
         autocomplete="new-password"
       />
       <div id="confirmPasswordError" class="error"></div>
@@ -85,16 +85,18 @@
 
       <button type="submit">SIGN UP</button>
 
-      <p class="formP">By clicking the Sign Up button, you are agree to</p>
-      <p class="formP">
+      <p class="footerForm">By clicking the Sign Up button, you are agree to</p>
+      <p class="footerForm">
         our
         <a href="#" onclick="event.preventDefault();">Terms & Conditions</a> and
         <a href="#" onclick="event.preventDefault();">Privacy Policy</a>
       </p>
     </form>
-    <p id="lastP">
+    <p id="footer">
       Already have an account?
-      <a id="lastA" href="#" onclick="event.preventDefault();">Login here</a>
+      <a id="footerLink" href="#" onclick="event.preventDefault();"
+        >Login here</a
+      >
     </p>
   </body>
 </html>
