--- a/JS/04_viikko/harjoitukset/Pankkiautomaatti/index.html
+++ b/JS/04_viikko/harjoitukset/Pankkiautomaatti/index.html
@@ -8,55 +8,62 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <!-- Login form -->
-    <form id="Login" autocomplete="off">
-      <input
-        type="password"
-        inputmode="numeric"
-        pattern="[0-9]*"
-        id="pin"
-        required
-        aria-describedby="pinError"
-        placeholder="Enter PIN"
-      />
-      <div id="pinError" class="error"></div>
+    <main>
+      <!-- Login form -->
+      <form class="form_pin" id="Login" autocomplete="off">
+        <div class="container">
+          <input
+            type="password"
+            inputmode="numeric"
+            pattern="[0-9]*"
+            id="pin"
+            required
+            aria-describedby="pinError"
+            placeholder="PIN"
+          />
 
-      <button id="buttonLogin" type="submit">Login</button>
-    </form>
+          <button id="buttonLogin" type="submit">Login</button>
+        </div>
+        <div id="pinError" class="error"></div>
+      </form>
 
-    <!-- Balance display -->
-    <div class="showBalance">
-      <h2 id="showHeader"></h2>
-      <h1 id="showBalance"></h1>
-    </div>
+      <!-- Balance display -->
+      <div class="showBalance">
+        <h2 id="showHeader"></h2>
+        <h1 id="showBalance"></h1>
+      </div>
 
-    <!-- Deposit and Withdraw -->
-    <form autocomplete="off">
-      <label for="balance">Balance</label>
-      <input
-        type="text"
-        inputmode="numeric"
-        pattern="[0-9]*"
-        id="balance"
-        required
-        aria-describedby="BalanceError"
-        placeholder="Enter amount"
-      />
-      <div id="errorBalance" class="error"></div>
-      <button id="buttonDeposit" type="button">Deposit</button>
-
-      <label for="withdraw">Withdraw</label>
-      <input
-        type="text"
-        inputmode="numeric"
-        pattern="[0-9]*"
-        id="withdraw"
-        required
-        aria-describedby="withdrawError"
-        placeholder="Enter amount"
-      />
-      <div id="errorWithdraw" class="error"></div>
-      <button id="buttonWithdraw" type="button">Withdraw</button>
-    </form>
+      <!-- Deposit and Withdraw -->
+      <form class="form_data" autocomplete="off">
+        <label for="balance">Balance</label>
+        <div class="container">
+          <input
+            type="text"
+            inputmode="numeric"
+            pattern="[0-9]*"
+            id="balance"
+            required
+            aria-describedby="BalanceError"
+            placeholder="Enter amount"
+          />
+          <button id="buttonDeposit" type="button">Deposit</button>
+        </div>
+        <div id="errorBalance" class="error"></div>
+        <label for="withdraw">Withdraw</label>
+        <div class="container">
+          <input
+            type="text"
+            inputmode="numeric"
+            pattern="[0-9]*"
+            id="withdraw"
+            required
+            aria-describedby="withdrawError"
+            placeholder="Enter amount"
+          />
+          <button id="buttonWithdraw" type="button">Withdraw</button>
+        </div>
+        <div id="errorWithdraw" class="error"></div>
+      </form>
+    </main>
   </body>
 </html>
