--- a/JS/04_viikko/Pannukakkusivu/index.html
+++ b/JS/04_viikko/Pannukakkusivu/index.html
@@ -14,64 +14,107 @@
 
       <div class="form-container">
         <h2>Customize Your Pancake</h2>
+        <form>
+          <h3>Customer info:</h3>
+          <label>Name: <input type="text" id="name" /></label>
 
-        <label for="type">Choose pancake type:</label>
-        <select id="type">
-          <option value="5">Classic - 5€</option>
-          <option value="6">Banana - 6€</option>
-          <option value="6">Chocolate - 6€</option>
-          <option value="7">Blueberry - 7€</option>
-        </select>
+          <h3>Choose pancake type:</h3>
+          <select id="type">
+            <option value="classic" data-price="5">Classic 5€</option>
+            <option value="banana" data-price="6">Banana 6€</option>
+            <option value="chocolate" data-price="6">Chocolate 6€</option>
+            <option value="blueberry" data-price="7">Blueberry 7€</option>
+          </select>
 
-        <h3>Choose toppings:</h3>
-        <label
-          ><input type="checkbox" class="topping" value="1" /> Maple syrup
-          1€</label
-        >
-        <label
-          ><input type="checkbox" class="topping" value="1" /> Chocolate
-          1€</label
-        >
-        <label
-          ><input type="checkbox" class="topping" value="1" /> Raspberry jam
-          1€</label
-        >
-        <label
-          ><input type="checkbox" class="topping" value="1" /> Strawberry jam
-          1€</label
-        >
-        <label
-          ><input type="checkbox" class="topping" value="1" /> Blueberry jam
-          1€</label
-        >
-        <label
-          ><input type="checkbox" class="topping" value="1" /> Lingonberry jam
-          1€</label
-        >
+          <h3>Choose toppings:</h3>
+          <label
+            ><input type="checkbox" class="topping" data-price="1" /> Maple
+            syrup 1€</label
+          >
+          <label
+            ><input type="checkbox" class="topping" data-price="1" /> Chocolate
+            1€</label
+          >
+          <label
+            ><input type="checkbox" class="topping" data-price="1" /> Raspberry
+            jam 1€</label
+          >
+          <label
+            ><input type="checkbox" class="topping" data-price="1" /> Strawberry
+            jam 1€</label
+          >
+          <label
+            ><input type="checkbox" class="topping" data-price="1" /> Blueberry
+            jam 1€</label
+          >
+          <label
+            ><input type="checkbox" class="topping" data-price="1" />
+            Lingonberry jam 1€</label
+          >
 
-        <h3>Choose extras:</h3>
-        <label
-          ><input type="checkbox" class="extra" value="1" /> Banana 1€</label
-        >
-        <label
-          ><input type="checkbox" class="extra" value="2" /> Strawberry
-          2€</label
-        >
-        <label
-          ><input type="checkbox" class="extra" value="2" /> Blueberry 2€</label
-        >
-        <label
-          ><input type="checkbox" class="extra" value="3" /> Raspberry 3€</label
-        >
-        <label
-          ><input type="checkbox" class="extra" value="2" /> Whipped cream
-          2€</label
-        >
-        <label
-          ><input type="checkbox" class="extra" value="3" /> Ice cream 3€</label
-        >
+          <h3>Choose extras:</h3>
+          <label
+            ><input type="checkbox" class="extra" data-price="1" /> Banana
+            1€</label
+          >
+          <label
+            ><input type="checkbox" class="extra" data-price="2" /> Strawberry
+            2€</label
+          >
+          <label
+            ><input type="checkbox" class="extra" data-price="2" /> Blueberry
+            2€</label
+          >
+          <label
+            ><input type="checkbox" class="extra" data-price="3" /> Raspberry
+            3€</label
+          >
+          <label
+            ><input type="checkbox" class="extra" data-price="2" /> Whipped
+            cream 2€</label
+          >
+          <label
+            ><input type="checkbox" class="extra" data-price="3" /> Ice cream
+            3€</label
+          >
 
-        <h3>Total price: <span id="totalPriceDisplay">5€</span></h3>
+          <h3>Delivery method:</h3>
+          <label
+            ><input
+              type="radio"
+              name="delivery"
+              value="eat-in"
+              data-price="0"
+              checked
+            />
+            Eat-in 0€</label
+          >
+          <label
+            ><input
+              type="radio"
+              name="delivery"
+              value="pickup"
+              data-price="0"
+              checked
+            />
+            Pickup 0€</label
+          >
+          <label
+            ><input
+              type="radio"
+              name="delivery"
+              value="delivery"
+              data-price="5"
+            />
+            Delivery 5€</label
+          >
+          <h3>Total price: <span id="totalPriceDisplay">5€</span></h3>
+        </form>
+
+        <button id="showSummaryButton">Show order summary</button>
+        <div class="order-summary">
+          <!-- Here will be an order -->
+        </div>
       </div>
     </div>
 
