minimum requirements met

--- a/JS/07_viikko/03_iliot/07/index.html
+++ b/JS/07_viikko/03_iliot/07/index.html
@@ -6,5 +6,10 @@
     <title>Weather App</title>
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Weather App</h1>
+    <input type="text" id="city" placeholder="Enter city" />
+    <button onclick="getWeather()">Get Weather</button>
+    <div id="weather"></div>
+  </body>
 </html>
