--- a/JS/04_viikko/Pannukakkusivu/index.html
+++ b/JS/04_viikko/Pannukakkusivu/index.html
@@ -25,59 +25,64 @@
             <option value="chocolate" data-price="6">Chocolate 6€</option>
             <option value="blueberry" data-price="7">Blueberry 7€</option>
           </select>
-
-          <h3>Choose toppings:</h3>
-          <label
-            ><input type="checkbox" class="topping" data-price="1" /> Maple
-            syrup 1€</label
-          >
-          <label
-            ><input type="checkbox" class="topping" data-price="1" /> Chocolate
-            1€</label
-          >
-          <label
-            ><input type="checkbox" class="topping" data-price="1" /> Raspberry
-            jam 1€</label
-          >
-          <label
-            ><input type="checkbox" class="topping" data-price="1" /> Strawberry
-            jam 1€</label
-          >
-          <label
-            ><input type="checkbox" class="topping" data-price="1" /> Blueberry
-            jam 1€</label
-          >
-          <label
-            ><input type="checkbox" class="topping" data-price="1" />
-            Lingonberry jam 1€</label
-          >
-
-          <h3>Choose extras:</h3>
-          <label
-            ><input type="checkbox" class="extra" data-price="1" /> Banana
-            1€</label
-          >
-          <label
-            ><input type="checkbox" class="extra" data-price="2" /> Strawberry
-            2€</label
-          >
-          <label
-            ><input type="checkbox" class="extra" data-price="2" /> Blueberry
-            2€</label
-          >
-          <label
-            ><input type="checkbox" class="extra" data-price="3" /> Raspberry
-            3€</label
-          >
-          <label
-            ><input type="checkbox" class="extra" data-price="2" /> Whipped
-            cream 2€</label
-          >
-          <label
-            ><input type="checkbox" class="extra" data-price="3" /> Ice cream
-            3€</label
-          >
-
+</form>
+<div class="row-container">
+            <form>
+            <h3>Choose toppings:</h3>
+            <label
+              ><input type="checkbox" class="topping" data-price="1" /> Maple
+              syrup 1€</label
+            >
+            <label
+              ><input type="checkbox" class="topping" data-price="1" />
+              Chocolate 1€</label
+            >
+            <label
+              ><input type="checkbox" class="topping" data-price="1" />
+              Raspberry jam 1€</label
+            >
+            <label
+              ><input type="checkbox" class="topping" data-price="1" />
+              Strawberry jam 1€</label
+            >
+            <label
+              ><input type="checkbox" class="topping" data-price="1" />
+              Blueberry jam 1€</label
+            >
+            <label
+              ><input type="checkbox" class="topping" data-price="1" />
+              Lingonberry jam 1€</label
+            >
+            </form>
+ <form>
+            <h3>Choose extras:</h3>
+            <label
+              ><input type="checkbox" class="extra" data-price="1" /> Banana
+              1€</label
+            >
+            <label
+              ><input type="checkbox" class="extra" data-price="2" /> Strawberry
+              2€</label
+            >
+            <label
+              ><input type="checkbox" class="extra" data-price="2" /> Blueberry
+              2€</label
+            >
+            <label
+              ><input type="checkbox" class="extra" data-price="3" /> Raspberry
+              3€</label
+            >
+            <label
+              ><input type="checkbox" class="extra" data-price="2" /> Whipped
+              cream 2€</label
+            >
+            <label
+              ><input type="checkbox" class="extra" data-price="3" /> Ice cream
+              3€</label
+            >
+          </div>
+</form>
+ <form>
           <h3>Delivery method:</h3>
           <label
             ><input
