--- a/JS/04_viikko/Pannukakkusivu/index.html
+++ b/JS/04_viikko/Pannukakkusivu/index.html
@@ -122,7 +122,12 @@
         </div>
       </div>
     </div>
-
+<div id="orderModal" class="modal hidden">
+  <div class="modal-content">
+    <span id="closeModal" class="close">&times;</span>
+    <div class="order-summary-modal"></div>
+  </div>
+</div>
     <script src="script.js"></script>
   </body>
 </html>
