--- a/JS/08_viikko/index.html
+++ b/JS/08_viikko/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="localStorage.js" defer></script>
+    <!-- <script src="localStorage.js" defer></script> -->
+    <!-- <script src="js_kirjoitussaannot.js" defer></script> -->
+    <script src="ketjutus.js" defer></script>
     <title>localStorage</title>
   </head>
   <body></body>
