--- a/JS/07_viikko/pikku_eläntarha/index.html
+++ b/JS/07_viikko/pikku_eläntarha/index.html
@@ -15,14 +15,7 @@
       <!-- Haku ja suodatus osio -->
       <div class="controls">
         <input type="text" id="searchAnimal" placeholder="Etsi nimellä..." />
-        <select id="filterType">
-          <!-- <option value="Kaikki">Kaikki eläimet</option>
-          <option value="Nisäkäs">Nisäkkäät</option>
-          <option value="Lintu">Linnut</option>
-          <option value="Matelija">Matelijat</option>
-          <option value="Sammakkoeläin">Sammakkoeläimet</option>
-          <option value="Kala">Kalat</option> -->
-        </select>
+        <select id="filterType"></select>
         <button onclick="sortAnimals()">Järjestä A-Ö</button>
       </div>
 
@@ -33,13 +26,7 @@
       <div class="add-animal">
         <h2>Lisää uusi eläin</h2>
         <input type="text" id="newAnimalName" placeholder="Eläimen nimi" />
-        <select id="newAnimalType">
-          <!-- <option value="Nisäkäs">Nisäkäs</option>
-          <option value="Lintu">Lintu</option>
-          <option value="Matelija">Matelija</option>
-          <option value="Sammakkoeläin">Sammakkoeläin</option>
-          <option value="Kala">Kala</option> -->
-        </select>
+        <select id="newAnimalType"></select>
         <button onclick="addAnimal()">Lisää eläin</button>
       </div>
 
